plugins {
    id 'java'
    id 'io.quarkus'
    id 'application'
    id "io.freefair.lombok" version "8.4"
}

repositories {
    mavenCentral()
    mavenLocal()
}

dependencies {
    implementation enforcedPlatform("${quarkusPlatformGroupId}:${quarkusPlatformArtifactId}:${quarkusPlatformVersion}")
    implementation 'io.quarkus:quarkus-arc'
    implementation 'io.quarkus:quarkus-resteasy-reactive'
    implementation 'io.quarkus:quarkus-config-yaml'
    implementation 'io.aeron:aeron-all:1.42.1'

    testImplementation 'io.quarkus:quarkus-junit5'
    testImplementation 'io.quarkus:quarkus-junit5-mockito'
    testImplementation 'io.rest-assured:rest-assured'
}

group 'org.realerting'
version '1.0.0-SNAPSHOT'

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

test {
    systemProperty "java.util.logging.manager", "org.jboss.logmanager.LogManager"
}
compileJava {
    options.encoding = 'UTF-8'
    options.compilerArgs << '-parameters'
}

compileTestJava {
    options.encoding = 'UTF-8'
}

// Needs to run aeron on JDK 17+
// Reference: https://aeroncookbook.com/cookbook-content/aeron-jdk16/
quarkus {
    test {
        jvmArgs = ['--add-opens=java.base/sun.nio.ch=ALL-UNNAMED']
    }
    testNative {
        jvmArgs = ['--add-opens=java.base/sun.nio.ch=ALL-UNNAMED']
    }
    quarkusDev {
        jvmArgs = ['--add-opens=java.base/sun.nio.ch=ALL-UNNAMED']
    }
}